[gd_scene load_steps=9 format=3 uid="uid://cnc1va72c1yi"]

[ext_resource type="Script" uid="uid://dtkwwwx8ag47y" path="res://Scripts/health_bar.gd" id="1_yroxy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_602gb"]
bg_color = Color(0.0656579, 0.0609608, 0.141434, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m4qir"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtmgw"]
bg_color = Color(1, 0.273989, 0.21327, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4l3qw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slkc1"]
bg_color = Color(0, 0.647059, 0.701961, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2qxxo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jq0b8"]
bg_color = Color(0.474797, 1.11302e-06, 3.60981e-07, 1)

[node name="HBoxContainer" type="HBoxContainer"]
texture_filter = 1
offset_right = 240.0
offset_bottom = 7.0
scale = Vector2(1.00192, 0.547139)
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1_yroxy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_styles/panel = SubResource("StyleBoxFlat_602gb")

[node name="HealthBar" type="ProgressBar" parent="Panel"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_m4qir")
theme_override_styles/fill = SubResource("StyleBoxFlat_qtmgw")
value = 60.0
show_percentage = false

[node name="EnergyShieldBar" type="ProgressBar" parent="Panel/HealthBar"]
unique_name_in_owner = true
self_modulate = Color(1.5, 1.5, 1.5, 1)
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_4l3qw")
theme_override_styles/fill = SubResource("StyleBoxFlat_slkc1")
value = 40.0
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="Panel/HealthBar"]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_2qxxo")
theme_override_styles/fill = SubResource("StyleBoxFlat_jq0b8")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="Panel/HealthBar"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Panel/HealthBar/Timer" to="." method="_on_timer_timeout"]
